themes/evolve/lessc/Dashboard.less
/* ... */
/* ********************************************************* */

#block-block-184 .carousel-control.left {
    background-image:none;
    color:white;
    cursor: pointer;
}

#block-block-184 .carousel-control.right {
    background-image:none;
    color:white;
    cursor: pointer;
}
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}
.dashboard-button
{
    background-color: #009fda;
	border-width: 0px !important;
    width: 110px;
    height: 30px;
}
#block-block-184 .dashboard-bottom-button{
    margin-top:20px;
}

#block-block-184 .carousel-control{
  width:0%;
}
#block-block-184 .carousel-control .glyphicon-chevron-left{
    position: absolute;
    font-size: 15px;
    left: 0;
}

#block-block-184 .carousel-control .glyphicon-chevron-right{
    position: absolute;
    font-size: 15px;
    right: -20px;
    @media all and (max-width: @tablet-width){
        right: 0;
    }
}

#block-block-184 .container-fluid {
  width:100%;
  padding-left: 0px!important;      
}

#block-block-184 td, #block-block-220 td, 
#block-block-216 #dashboard-navbar-collapse-1 td, 
#block-block-218 #dashboard-navbar-collapse-1 td, 
#block-block-220 #dashboard-navbar-collapse-1 td{
   border-top: none;
}
#block-block-218 .down4 td, #block-block-218 .down5 td{
   border-top: none!important;
   border-bottom: 1px solid #ddd;
  
}
#block-block-218 .down4 tbody, #block-block-218 .down5 tbody{
   border-top: none!important;
}
.container-fluid a{
   color:white;
}

.dashboard-backgroud{
    float: right;
    border: none;
    background: transparent;
}

#block-block-184 label > input, 
#block-block-216 label > input, #block-block-218 label > input, 
#block-block-220 label > input, #block-block-243 label > input, 
#block-block-242 label > input, #block-block-244 label > input, 
#block-block-245 label > input{ /* HIDE RADIO */
  visibility: hidden; /* Makes input not-clickable */
  position: absolute; /* Remove input from document flow */
}
#block-block-184 label > input + img, #block-block-216 label > input + img, #block-block-218 label > input + img, #block-block-220 label > input + img, #block-block-243 label > input + img, #block-block-242 label > input + img, #block-block-244 label > input + img, #block-block-245 label > input + img{ /* IMAGE STYLES */
  cursor:pointer;
  border:2px solid transparent;
}
#block-block-184 label > input:checked + img, #block-block-216 label > input:checked + img, #block-block-218 label > input:checked + img, #block-block-220 label > input:checked + img, #block-block-243 label > input:checked + img, #block-block-242 label > input:checked + img, #block-block-244 label > input:checked + img, #block-block-245 label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
  border:2px solid #009fda;
}

form[name="formradio"] label {
    width: 32.5%;
}
.paymentsidecredit fieldset{
	margin-top: 6px;
}

label[for="privacypolicyp"]{
    margin-left:-3px;
}
#rollOverWindow h3, #insurancePopUp h3{
    color: #009fda!important;
	margin-top: -6px;
	margin-bottom: 28px;
}
#privacypolicyWindow h3, #installmentpolicyWindow h3{
    color: #009fda !important;
    margin-top: 22px;
    margin-bottom: 22px;
    margin-left: 13px;
}

a.cancelDeleteButton {
    padding: 8px 46px;
    background-color: #009fda;
    color: white;
    margin-left: 10%;
}
button.deletecardbutton {
    width: 100px;
    height: 33px;
    border: none;
    background-color: #009fda !important;
    color: white !important;
}

.stop{
    opacity: 0.5;
    pointer-events: none;
    cursor: default;
}
.form-control[disabled], .form-control[readonly], fieldset[disabled]{
   	cursor: default!important;
	
}
/* ********************************************************* */
/* -----------------Join the member page added by jinghu End---------- */
/* ********************************************************* */



#conditions {
    margin-left: 0%!important;
    margin-right: 13px;
}
.display{
	display:block;
}


/* ********************************************************* */
/* -----------------Subscriptions page added by jinghu End---------- */
/* ********************************************************* */

#block-block-216 .table-bordered td{
   width:50%;
}
#block-block-216 .table-bordered td label{
   font-weight:500;
   width:90%;     
}
#block-block-216 #dashboard-right-content{
   min-height:100%;
}
.subscriptions-submit{
   float:left; 
   margin-bottom:20px;
}
/* ********************************************************* */
/* -----------------Subscriptions page added by jinghu End---------- */
/* ********************************************************* */


/* ********************************************************* */
/* -----------------Purchases page added by jinghu End---------- */
/* ********************************************************* */

/* ********************************************************* */
/* -----------------Purchases page added by jinghu End---------- */
/* ********************************************************* */


/* ********************************************************* */
/* -----------------Your detail page added by jinghu---------- */
/* ********************************************************* */


#block-block-245 .down8 .paymentsidecredit .row, #block-block-249 .down8 .paymentsidecredit .row{
   margin-left:-16px!important;
   background: none !important;
   margin-right: -1px;
}

#block-block-245 .down8 .paymentsidecredit, #block-block-249 .down8 .paymentsidecredit{
   background:none!important;

}
#block-block-220 input[type="text"]{
   padding:0;
   padding-left:10px;
}
#block-block-220 .row, #block-block-243 .row, #block-block-245 .row, #block-block-249 .row{
   margin-bottom: 15px;
}
#block-block-243 #changePasswordForm{
   margin-top: 23px;
}
#changePasswordForm{
    a{
        color: @bright-blue;
        margin-top: 5px;
        display: block;
        text-decoration: underline;
    }
}
/* ... */

